Still fixing paragraph spacing

--- a/css/app.css
+++ b/css/app.css
@@ -8,6 +8,7 @@
  body {
   background: #333;
   font-size: 1.6em;
+  margin-bottom: 1.2em;
   color: #eee;
   font-weight: 600;
  }
